fixing z-index for top nav

--- a/src/ggrc/assets/stylesheets/_layout.scss
+++ b/src/ggrc/assets/stylesheets/_layout.scss
@@ -61,7 +61,7 @@
   width: 100%;
   position: fixed;
   top: 80px;
-  z-index: 1000;
+  z-index: 100;
   border-bottom: 1px solid $tabBorder;
 }
 .object-area {
